# social_verse

./: .env_test  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  readme.md
apps/countries/: admin.py  models.py  serializers.py  urls.py  views.py
apps/countries/migrations/: 0001_initial.py
apps/countries/services/: country.py
apps/posts/: admin.py  models.py  serializers.py  urls.py  views.py
apps/posts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_post_author.py  0004_alter_post_tags.py
apps/posts/services/: dashboard.py  posts.py
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_remove_user_post_count.py  0003_remove_user_blocked_users_user_bblocked_users_and_more.py
apps/users/services/: jwt.py  user.py
services/base/: pagination.py  service.py
services/country_layer/: country_layer.py  serializers.py
services/request_service/: exceptions.py  request_service.py
travel_verse/: asgi.py  settings.py  urls.py  wsgi.py
